Add active state for extent button

--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -108,6 +108,9 @@ input[type=button] {
             border-color: @heritage-blue-light;
             color: @heritage-blue;
         }
+        &:visited {
+            color: @heritage-blue;
+        }
     }
 }
 
