Change weight in checkbox block to 600

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -259,7 +259,7 @@ textarea.form__field {
             display: table-cell;
             margin: 0;
             span {
-                font-weight: @font-weight-bolder;
+                font-weight: @font-weight-bold;
             }
         }
     }
