First draft of tool

--- a/libs/jade/post-tool-3.jade
+++ b/libs/jade/post-tool-3.jade
@@ -26,32 +26,10 @@ block content
 		.flex-container
 			.flex-row
 				.form.col-xs-12.col-md-4
-					fieldset
-						label(for="standardField") Full name
-						input#standardField(placeholder="", type="text" required)
+					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce congue nisi sit amet tellus semper mollis. Integer ut congue ipsum. Pellentesque placerat sem ut tellus lacinia mattis. Sed viverra purus nec neque vehicula gravida.
 
-					fieldset
-						label(for="standardField") Email
-						input#standardField(placeholder="", type="email" required)
-
-					fieldset
-						label(for="standardField") Address line 1
-						input#standardField(placeholder="", type="email" required)
-
-					fieldset
-						label(for="standardField") Address line 2
-						input#standardField(placeholder="", type="email")
-
-					fieldset
-						label(for="standardField") Town or city
-						input#standardField(placeholder="", type="email")
-
-					fieldset
-						label(for="standardField") Postcode
-						input#standardField(placeholder="", type="email" required)
-
-					a.btn-light.left-button-icon(href="post-tool.html") Back
-					a.btn.right-button-icon(href="post-tool-3.html") Next
+					a.btn-light.left-button-icon(href="post-tool-2.html") Edit
+					a.btn-secondary.email-button-icon(href="post-tool-4.html") Send
 
 				#letter.col-xs-12.col-md-8
 					.letter-content
