--- a/libs/jade/post-tool.jade
+++ b/libs/jade/post-tool.jade
@@ -23,18 +23,21 @@ block content
 					p
 						span Royal Mail Door to Door
 						br
-						| I understand that I may miss important information from local or national government or other publications that are sent using this service.
+						| Could include information from local or national government.
 				label.checkbox.checkbox--block
 					input(name="checkbox", type="checkbox")
 					p
 						span Direct Marketing Association’s ‘Your Choice’ scheme
 						br
-						| Organisations who communicate in this way include local authorities, central government, utility companies (e.g. gas, water, electricity), public service organisations, charities, political parties, local education bodies, local shops and providers of local services.
+						| Could include local authorities, central government, utilities, charities, political parties, local education bodies, local shops and providers of local services.
+				label.checkbox.checkbox--block
+					input(name="checkbox", type="checkbox")
+					| Mailing Preference Service
 				label.checkbox.checkbox--block
 					input(name="checkbox", type="checkbox")
 					p
-						span Mailing Preference Service
+						span Your local electoral registration office
 						br
-						| Before you register please remember, if your name is taken off Direct Mailing Lists you could miss out on mailings you may still wish to receive. So before you say ‘No’ to Direct Mail you may wish to reconsider.
+						| This will not affect your right to vote.
 
 			a.btn.right-button-icon(href="post-tool-2.html") Start
