First draft of tool

--- a/libs/site.less
+++ b/libs/site.less
@@ -71,7 +71,7 @@
 //@import "modules/atoz";
 @import "modules/cookie-monster";
 //@import "modules/toc";
-//@import "modules/letter";
+@import "modules/letter";
 @import "modules/section-notice";
 //@import "modules/login";
 @import "modules/page-list";
