Fixed sticky box example

--- a/libs/jade/sticky.jade
+++ b/libs/jade/sticky.jade
@@ -18,15 +18,11 @@ block content
 		div
 			p Notices stick to the top of the screen if the user scrolls past them.  The notice is contained within its parent.
 
-			.box--sticky.js-make-sticky
-				p This is OISC level 1 advice - you’re qualified to advise on this subject.
-				
+			.example-box-plain(style="height:800px")
+				.box--sticky.js-make-sticky
+					p This is OISC level 1 advice - you’re qualified to advise on this subject.
 			pre
 				code.language-html
 					| &lt;div class="box--sticky js-make-sticky"&gt;
-					| 	&lt;p&gt;
-					| 		&lt;p&gt;This is OISC level 1 advice - you’re qualified to advise on this subject&lt;/p&gt;
-					| &lt;/p&gt;
-
-
-			div(style="height:1200px") 
+					| 	&lt;p&gt;This is OISC level 1 advice - you’re qualified to advise on this subject&lt;/p&gt;
+					| &lt;/div&gt;
