Fixed bug causing the top of the sidebar to link to a 404 on gh-pages

--- a/libs/template/mixins.jade
+++ b/libs/template/mixins.jade
@@ -19,7 +19,7 @@ mixin sidebar(obj, key)
 			a In this section
 		ul
 			li
-				a.section-nav__parent(href="../##{section}") #{section}
+				a.section-nav__parent(href="./##{section}") #{section}
 				ul
 					- each item,index in obj
 						li
