--- a/libs/jade/post-tool.jade
+++ b/libs/jade/post-tool.jade
@@ -16,12 +16,9 @@ block content
 	.articleContent
 		div
 			p You'll need to contact three organisations to stop getting junk mail.
-
 			p This tool will email them all for you in one go.
-
-			p You can also remove your details from the 'open register' at your local electoral office - a list of addresses that can be used for sending junk mail.
-
-			p You'll need to post or email a letter as an attachment to your local office - we'll create one for you to print or download.
+			p You can also remove your details from the 'open register' - a list of addresses that can be used for sending junk mail.
+			p You'll need to post or email a letter to your local electoral office to be removed from the register - we'll create one for you to download.
 			fieldset
 				legend(for="checkbox") Who would you like to contact?
 				label.checkbox.checkbox--block
