Made sign-out button white on mobile

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -219,6 +219,9 @@ input.main-header__search__input {
     padding: 0;
     font-weight: normal;
     color: @heritage-blue;
+    @media ( max-width: @screen-xs-max ) {
+        color: @white;
+    }
 }
 
 .main-header__logout {
