--- a/libs/jade/post-tool.jade
+++ b/libs/jade/post-tool.jade
@@ -44,6 +44,6 @@ block content
 					p
 						span Your local electoral registration office
 						br
-						| This won't affect your right to vote.
+						| Organisations won't be able to access your address to send you junk mail.
 
 			a.btn.right-button-icon(href="post-tool-2.html") Start
