Fixed hover colour on sign out

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -228,6 +228,7 @@ input.main-header__search__input {
     &:active,
     &:focus {
         background-color: @white;
+        color: @heritage-blue;
     }
 }
 
