--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -10,6 +10,9 @@
 .main-header {
     background-color: @white;
     overflow: hidden; // Collapsing margin issues
+    a:visited {
+        background-color: @heritage-blue;
+    }
 }
 
 .advisernet {
@@ -57,11 +60,6 @@
     @media ( max-width: @screen-xs-max ) {
         display: block;
         background-color: @heritage-blue;
-        &:hover,
-        &:active,
-        &:visited {
-            background-color: @heritage-blue;
-        }
         margin: 0;
         width: 100%;
         padding: 1rem;
