Fixed blockquote styling

--- a/libs/mixins/callout.less
+++ b/libs/mixins/callout.less
@@ -61,7 +61,8 @@
 
 *[class^="callout"],
 .dap-panel,
-.box--sticky {
+.box--sticky,
+blockquote {
     padding: .75em 1em;
     padding: @box-spacing-vertical @box-spacing-horizontal;
     margin: @box-spacing-vertical 0;
