--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -94,7 +94,9 @@
 }
 
 // Gray
-.callout--quote, .callout--example,
+.callout--quote,
+.callout--example,
+blockquote,
 .dap-panel--example {
 	.callout(
 		@white,
