Removed hover state on mobile header

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -10,6 +10,8 @@
 .main-header {
     background-color: @white;
     overflow: hidden; // Collapsing margin issues
+    a:hover,
+    a:focus,
     a:visited {
         background-color: @heritage-blue;
     }
