Fixed date field height bug

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -313,6 +313,10 @@ input[class*="dob-"] {
         margin: 0;
     }
 }*/
+.form-group-date {
+    overflow: auto;
+}
+
 .form-group-date fieldset {
     &:extend(fieldset);
     width: 5rem;
