Added support for tel input fields

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -66,6 +66,7 @@ input[type=text],
 input[type=password],
 input[type=email],
 input[type=number],
+input[type=tel],
 input[type=search] {
     padding: @box-spacing-vertical @box-spacing-horizontal;
     -webkit-appearance: none;
