Removed visited styling from sharebar icons

--- a/libs/modules/share-bar.less
+++ b/libs/modules/share-bar.less
@@ -112,7 +112,7 @@ html[data-useragent*='Mobi'] .a-social-whatsapp {
             overflow: hidden;
         }
 
-        &:hover, &:focus {
+        &:hover, &:focus, &:visited {
             color: @white;
             text-decoration: none;
 
