--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -167,8 +167,8 @@
         @gray-8,
         @callout-border: @gray-6
     );
-    .callout--border;
-    border-radius: @form-border-radius;
+    //.callout--border;
+    //border-radius: @form-border-radius;
 }
 .well--outline {
     .dap-panel;
