--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -170,8 +170,8 @@ blockquote,
         @gray-8,
         @callout-border: @gray-6
     );
-    .callout--border;
-    border-radius: @form-border-radius;
+    //.callout--border;
+    //border-radius: @form-border-radius;
 }
 .well--outline {
     .dap-panel;
