--- a/libs/jade/witness-form-complete.jade
+++ b/libs/jade/witness-form-complete.jade
@@ -19,6 +19,18 @@ block content
 				h2 Form submitted
 				p Your form has been submitted, your reference number is:
 				h2 1234567
+				p Would you like a copy of your submission?
+				button.btn-secondary.email-button-icon(type="button") Email
+				button.btn-secondary.print-button-icon(type="button") Print
+
+
 
 			h3 What happens next?
-			p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+			p Someone from the Witness Service will be in touch using the phone number or email below, please add them to your contacts so you know they are calling and so that the email doesn't go into your junk email folder.
+
+			p If you have any questions, you can also use these details to get in touch
+
+			h4 Witness Service call centre
+			p 020 123 4567
+			p #[a(href="#") witness@citizensadvice.org.uk]
+			
