Update form following meeting

--- a/libs/jade/witness-form-5.jade
+++ b/libs/jade/witness-form-5.jade
@@ -16,17 +16,14 @@ block content
 	.articleContent
 		div
 			h2 The trial and the witness’s support needs
-			.well
-				fieldset
-					label(for="standardField") Defendant name
-					input(id="standardField" placeholder="" type="text")
+			fieldset
+				label(for="standardField") Defendant name(s)
+				input(id="standardField" placeholder="" type="text")
 
-				fieldset
-					label(for="standardField") URN
-					span.form-hint Where this number comes from?
-					input(id="standardField" placeholder="" type="text")
-
-			a.btn.plus-button-icon(href="#") Add defendant
+			fieldset
+				label(for="standardField") URN
+				span.form-hint Where this number comes from?
+				input(id="standardField" placeholder="" type="text")
 
 			fieldset
 				label(for="standardField") Offence
