--- a/libs/jade/witness-form-6.jade
+++ b/libs/jade/witness-form-6.jade
@@ -31,7 +31,7 @@ block content
 					input(name="radio", type="radio", value="option1")
 					| no
 				label.radio.radio--block
-					input(checked, name="radio", type="radio", value="option1")
+					input(name="radio", type="radio", value="option1")
 					| I’m not sure/don’t know
 
 			fieldset
@@ -49,7 +49,7 @@ block content
 					input(name="radio1", type="radio", value="option1")
 					| no
 				label.radio.radio--block
-					input(checked, name="radio", type="radio", value="option1")
+					input(name="radio", type="radio", value="option1")
 					| I’m not sure/don’t know
 
 			fieldset
