--- a/libs/jade/witness-form-7.jade
+++ b/libs/jade/witness-form-7.jade
@@ -19,8 +19,8 @@ block content
 			fieldset
 				legend(for="radio") Screens
 				label.radio.radio--block
-					input(checked, name="radio", type="radio", value="option1")
-					| don’t know/ not needed 
+					input(name="radio", type="radio", value="option1")
+					| don’t know/not needed 
 				label.radio.radio--block
 					input(name="radio", type="radio", value="option1")
 					| need identified
@@ -33,8 +33,8 @@ block content
 			fieldset
 				legend(for="radio") Evidence in chief
 				label.radio.radio--block
-					input(checked, name="radio", type="radio", value="option1")
-					| don’t know/ not needed 
+					input(name="radio", type="radio", value="option1")
+					| don’t know/not needed 
 				label.radio.radio--block
 					input(name="radio", type="radio", value="option1")
 					| need identified
@@ -47,8 +47,8 @@ block content
 			fieldset
 				legend(for="radio") Livelink
 				label.radio.radio--block
-					input(checked, name="radio", type="radio", value="option1")
-					| don’t know/ not needed 
+					input(name="radio", type="radio", value="option1")
+					| don’t know/not needed 
 				label.radio.radio--block
 					input(name="radio", type="radio", value="option1")
 					| need identified
@@ -61,8 +61,8 @@ block content
 			fieldset
 				legend(for="radio") Pre-recorded cross examination
 				label.radio.radio--block
-					input(checked, name="radio", type="radio", value="option1")
-					| don’t know/ not needed 
+					input(name="radio", type="radio", value="option1")
+					| don’t know/not needed 
 				label.radio.radio--block
 					input(name="radio", type="radio", value="option1")
 					| need identified
@@ -75,8 +75,8 @@ block content
 			fieldset
 				legend(for="radio") Closed court
 				label.radio.radio--block
-					input(checked, name="radio", type="radio", value="option1")
-					| don’t know/ not needed 
+					input(name="radio", type="radio", value="option1")
+					| don’t know/not needed 
 				label.radio.radio--block
 					input(name="radio", type="radio", value="option1")
 					| need identified
@@ -89,8 +89,8 @@ block content
 			fieldset
 				legend(for="radio") Removal of wigs and gowns
 				label.radio.radio--block
-					input(checked, name="radio", type="radio", value="option1")
-					| don’t know/ not needed 
+					input(name="radio", type="radio", value="option1")
+					| don’t know/not needed 
 				label.radio.radio--block
 					input(name="radio", type="radio", value="option1")
 					| need identified
@@ -103,8 +103,8 @@ block content
 			fieldset
 				legend(for="radio") Intermediary
 				label.radio.radio--block
-					input(checked, name="radio", type="radio", value="option1")
-					| don’t know/ not needed 
+					input(name="radio", type="radio", value="option1")
+					| don’t know/not needed 
 				label.radio.radio--block
 					input(name="radio", type="radio", value="option1")
 					| need identified
@@ -117,8 +117,8 @@ block content
 			fieldset
 				legend(for="radio") Aids to communication
 				label.radio.radio--block
-					input(checked, name="radio", type="radio", value="option1")
-					| don’t know/ not needed 
+					input(name="radio", type="radio", value="option1")
+					| don’t know/not needed 
 				label.radio.radio--block
 					input(name="radio", type="radio", value="option1")
 					| need identified
