--- a/libs/jade/post-tool-2.jade
+++ b/libs/jade/post-tool-2.jade
@@ -56,4 +56,20 @@ block content
 
 				#letter.col-xs-12.col-md-8
 					.letter-content
-						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce congue nisi sit amet tellus semper mollis. Integer ut congue ipsum. Pellentesque placerat sem ut tellus lacinia mattis. Sed viverra purus nec neque vehicula gravida.
+						p
+						| 1 High Street
+						br 
+						| New Town
+						br
+						| New City
+						br
+						| A1 1AA
+
+						p
+						| Please accept this communication as instructions to remove the above address from delivering all unaddressed items.
+						p
+						| I understand that I may miss information from local or national government or other publications that are sent using this service.
+
+						p
+						| Joe Blogs
+						p joe@joeblogs.com						
